# plotter_sketches

./: .gitignore  README.md
notes/: diy_plotters.md  plotter_hardware_designs.md  plotter_notes.csv  plotter_notes.md  product_codes.md  protocols.md  prtocols_big.csv  random_links.md  supplies.md  vintage_plotter_links.md
other_testplots/: readme.md
test_plot/: Readme.md
turtletoy/: cheese.js  flower.js  glyph.js  hex_grid.js  parametrics_dragon.js  pipes.js  rain.js  sdfTest.js  sprio1.js  testTurtle.js  truchet_snowflakes.js  wall.js
vsvg/dither_hatch/: Cargo.toml
vsvg/dither_hatch/src/: main.rs
vsvg/simple/: Cargo.toml  readme.md
vsvg/simple/examples/: christmas_tree.rs  circles.rs  circles2.rs  mst.rs  pattern_1.rs  snowfl.rs
vsvg/simple/src/: main.rs
